--- a/package.json
+++ b/package.json
@@ -14,12 +14,17 @@
     "native-base": "^3.4.28",
     "react": "18.2.0",
     "react-native": "0.72.6",
-    "react-native-svg": "13.9.0",
-    "react-native-safe-area-context": "4.6.3"
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-svg": "13.9.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@rocketseat/eslint-config": "^2.1.0",
     "@types/react": "~18.2.14",
+    "eslint": "^8.56.0",
+    "eslint-plugin-import-helpers": "^1.3.1",
+    "eslint-plugin-prettier": "^5.1.2",
+    "prettier": "^3.1.1",
     "typescript": "^5.1.3"
   },
   "private": true
