--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,13 +9,16 @@
         {
           "newlinesBetween": "always", // new line between groups
           "groups": [
-              ["/^react/", "/^native-base/"],
-              "/^@expo/",
-              "module",
-              "/^@screens/",
-              "/^@assets/",
-              "/^@components/",
-              ["parent", "sibling", "index", "type"]
+            ["/^react$/", "/^react-native$/"],
+            ["/^native-base/", "/^@expo/"],
+            "module",
+            "/^@screens/",
+            ["/^@components/", "/^@hooks/"],
+            ["/^@services/","/^@dtos/"],
+            "/^@storages/",
+            "/^@utils/",
+            "/^@assets/",
+            ["parent", "sibling", "index", "type"]
           ],
           "alphabetize": { "order": "desc", "ignoreCase": true }
         }
