--- a/package.json
+++ b/package.json
@@ -10,15 +10,15 @@
     "postinstall": "patch-package"
   },
   "dependencies": {
-    "expo": "~49.0.15",
-    "expo-status-bar": "~1.6.0",
+    "expo": "^50.0.4",
+    "expo-status-bar": "~1.11.1",
     "native-base": "^3.4.28",
     "patch-package": "^8.0.0",
     "postinstall": "^0.9.0",
-    "react": "18.2.0",
-    "react-native": "0.72.6",
-    "react-native-safe-area-context": "4.6.3",
-    "react-native-svg": "13.9.0"
+    "react": "^18.2.0",
+    "react-native": "^0.73.2",
+    "react-native-safe-area-context": "^4.8.2",
+    "react-native-svg": "^14.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
